--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -12,38 +12,18 @@
   gap: 40px;
   align-items: center;
   color: rgb(27, 24, 24);
-  /* border: 1px solid green; */
-  /* background-color: grey; */
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
 }
 
 .main h1 {
-  font-size: 2rem;
-  margin: 0;
-  line-height: 1.2;
-  font-size: 6rem;
-  font-family: "Oleo Script Swash Caps", cursive;
-  color: #000;
-  /* font-family: "Rubik Moonrocks", cursive; */
-}
+  margin-bottom: 10px;
+  line-height: 1;
+  font-size: 5rem;
+  font-family: "Rubik Moonrocks", cursive;
 
-/* .title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  text-align: flex-start;
-} */
-.description {
-  margin-top: -35px;
-  font-size: 1.7rem;
   color: #000;
-  /* font-family: "Oleo Script Swash Caps", cursive; */
-  font-family: "EB Garamond", serif;
-  /* line-height: 1.4; */
+  letter-spacing: 8px;
 }
 
 /* links */
@@ -53,7 +33,6 @@
   gap: 25px;
   text-align: start;
   padding: 0;
-  margin-top: -20px;
 }
 
 .links li {
@@ -61,12 +40,14 @@
   list-style: none;
   justify-content: start;
   align-items: flex-start;
-  font-size: 1.5rem;
-  font-family: "Rubik Moonrocks", cursive;
-
+  font-size: 1.7rem;
   margin-bottom: 20px;
   color: rgb(6, 5, 5);
-  /* transform: rotate(4deg); */
+  font-family: "Oleo Script Swash Caps", cursive;
+}
+
+.links li:hover {
+  color: red;
 }
 
 /* .links li:hover {
@@ -96,8 +77,7 @@
 }
 
 /*  */
-
-.code {
+/* .code {
   background: #fafafa;
   border-radius: 5px;
   padding: 0.75rem;
@@ -147,7 +127,7 @@
 .logo {
   height: 1em;
   margin-left: 0.5rem;
-}
+} */
 
 @media screen and (max-width: 900px) {
   .image_section {
@@ -157,20 +137,15 @@
     justify-content: center;
     align-items: center;
   }
-  /* .main h1 {
-    font-size: 1.5rem;
-  } */
+  .main h1 {
+    font-size: 5rem;
+    margin-bottom: 5px;
+    line-height: 1;
+  }
 
-  .description {
-    margin-top: -20px;
+  .links li {
     font-size: 1.5rem;
-    /* font-family: "Rubik Moonrocks", cursive; */
-    /* line-height: 1.4; */
+    margin-top: 10px;
+    margin-bottom: 30px;
   }
 }
-/* @media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
-} */
