--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -1,36 +1,10 @@
-.aboutcontainer{
-    margin: auto;
-    width: 80%;
-    
+.container {
+  display: flex;
+  margin: auto;
+  width: 70%;
+  margin-top: 150px;
+ 
 }
-
-.container{
-    background: grey;
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    gap: 50px;
+.container h3{
+  font-size: 20px;
 }
-
-.modal_container{
-    align-items: center;
-    background-color: rgba(0,0,0,.5);
-    display: flex;
-    height: 100%;
-    width: 100%;
-    justify-content: center;
-    left: 0;
-    position: fixed;
-    top: 0;
-    z-index: 90;
-  }
-  
-  .modal{
-    background: #ffffff;
-    border-radius: 5px;
-      overflow-y: scroll;
-      padding: 20px;
-      position: absolute;
-      width: 600px;
-      height: 400px;
-  
-  }
