--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -26,6 +26,17 @@
   letter-spacing: 8px;
 }
 
+.description h4 {
+  color: #000;
+  font-family: "Rubik Moonrocks", cursive;
+  font-size: 1.5rem;
+}
+
+.description p {
+  color: #000;
+  font-size: 1.3rem;
+  font-family: "Oleo Script Swash Caps", cursive;
+}
 /* links */
 .links ul {
   display: flex;
