--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,6 +2,7 @@
 
 .container {
   padding: 0 10rem;
+  min-height: 100vh;
   background: linear-gradient(30deg, #8d4a8b 30%, #9e4964 55%, #9e489e 94%);
 }
 
@@ -12,8 +13,6 @@
   gap: 40px;
   align-items: center;
   color: rgb(27, 24, 24);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
 }
 
 .main h1 {
@@ -21,7 +20,6 @@
   line-height: 1;
   font-size: 5rem;
   font-family: "Rubik Moonrocks", cursive;
-
   color: #000;
   letter-spacing: 8px;
 }
@@ -30,6 +28,7 @@
   color: #000;
   font-family: "Rubik Moonrocks", cursive;
   font-size: 1.5rem;
+  margin: 10px 0 10px 0;
 }
 
 .description p {
@@ -141,6 +140,9 @@
 } */
 
 @media screen and (max-width: 900px) {
+  .container {
+    padding: 5rem 10rem;
+  }
   .image_section {
     display: none;
   }
