--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,7 +3,8 @@
 .container {
   padding: 0 10rem;
   min-height: 100vh;
-  background: linear-gradient(30deg, #8d4a8b 30%, #9e4964 55%, #9e489e 94%);
+  background: #262833;
+  /* background: linear-gradient(30deg, #8d4a8b 30%, #9e4964 55%, #9e489e 94%); */
 }
 
 .main {
@@ -12,29 +13,38 @@
   grid-template-columns: 1fr 1fr;
   gap: 40px;
   align-items: center;
-  color: rgb(27, 24, 24);
+
+  /* color: #9E3A20; */
+  /* color: rgb(221, 203, 203); */
+  color: wheat;
 }
 
 .main h1 {
   margin-bottom: 10px;
   line-height: 1;
   font-size: 5rem;
-  font-family: "Rubik Moonrocks", cursive;
-  color: #000;
+    font-family: "Oleo Script Swash Caps", cursive;
+
+  /* font-family: "Rubik Moonrocks", cursive; */
   letter-spacing: 8px;
 }
 
 .description h4 {
-  color: #000;
-  font-family: "Rubik Moonrocks", cursive;
+  color: rgb(199, 176, 129);
+  /* font-family: "Rubik Moonrocks", cursive; */
+  font-family:  Bitstream Vera Sans Mono, Courier New, monospace;
   font-size: 1.5rem;
   margin: 10px 0 10px 0;
+  letter-spacing: 5px;
 }
 
 .description p {
-  color: #000;
+  color: rgb(199, 176, 129);
   font-size: 1.3rem;
-  font-family: "Oleo Script Swash Caps", cursive;
+  font-family:  Bitstream Vera Sans Mono, Courier New, monospace;
+  text-align: start;
+  /* letter-spacing: 1px; */
+
 }
 /* links */
 .links ul {
@@ -67,7 +77,7 @@
   display: flex;
   align-items: center;
   gap: 25px;
-  color: rgb(6, 4, 4);
+  color: rgb(199, 176, 129);
 }
 
 .footer {
@@ -139,9 +149,10 @@
   margin-left: 0.5rem;
 } */
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 720px) {
   .container {
     padding: 5rem 10rem;
+    margin-top: -190px;
   }
   .image_section {
     display: none;
@@ -151,7 +162,7 @@
     align-items: center;
   }
   .main h1 {
-    font-size: 5rem;
+    font-size: 3.5rem;
     margin-bottom: 5px;
     line-height: 1;
   }
@@ -160,5 +171,12 @@
     font-size: 1.5rem;
     margin-top: 10px;
     margin-bottom: 30px;
+  }
+  .description h4{
+    font-size: 14px;
+    font-weight: 600;
+  }
+  .description p{
+  font-size: 16px;
   }
 }
