--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,17 +1,23 @@
 .navbar {
-  background: linear-gradient(30deg, #8d4a8b 10%, #9e4964 25%, #9e489e 94%);
+  background: #262833;
+  /* background: linear-gradient(30deg, #8d4a8b 10%, #9e4964 25%, #9e489e 94%); */
   height: 80px;
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 1.2rem;
+  position: sticky;
+  width: 100%;
+  z-index: 1;
 }
 
 .logo {
   justify-self: start;
   margin-left: 20px;
   cursor: pointer;
-  font-size: 1.5rem;
+  font-size: 2rem;
+  font-family: "Rubik Moonrocks", cursive;
+  color:wheat;
 }
 
 .sidenav {
@@ -26,13 +32,16 @@
 }
 
 .navLinks {
-  color: #fff;
+  color: wheat;
   text-decoration: none;
   padding: 0.5rem 1rem;
+  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
+    Bitstream Vera Sans Mono, Courier New, monospace;
+  /* font-family: "Rubik Moonrocks", cursive; */
 }
 
 .navLinks:hover {
-  background-color: #e1e1e1;
+  background-color: wheat;
   color: #000;
   border-radius: 5px;
   transition: all 0.2s ease-out;
