--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -10,10 +10,9 @@
 .main {
   min-height: 100vh;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 400px;
   gap: 40px;
   align-items: center;
-
   /* color: #9E3A20; */
   /* color: rgb(221, 203, 203); */
   color: wheat;
@@ -24,7 +23,6 @@
   line-height: 1;
   font-size: 5rem;
     font-family: "Oleo Script Swash Caps", cursive;
-
   /* font-family: "Rubik Moonrocks", cursive; */
   letter-spacing: 8px;
 }
@@ -32,8 +30,8 @@
 .description h4 {
   color: rgb(199, 176, 129);
   /* font-family: "Rubik Moonrocks", cursive; */
-  font-family:  Bitstream Vera Sans Mono, Courier New, monospace;
-  font-size: 1.5rem;
+  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
+  Bitstream Vera Sans Mono, Courier New, monospace;  font-size: 1.5rem;
   margin: 10px 0 10px 0;
   letter-spacing: 5px;
 }
@@ -41,9 +39,9 @@
 .description p {
   color: rgb(199, 176, 129);
   font-size: 1.3rem;
-  font-family:  Bitstream Vera Sans Mono, Courier New, monospace;
-  text-align: start;
-  /* letter-spacing: 1px; */
+  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
+  Bitstream Vera Sans Mono, Courier New, monospace;  text-align: start;
+  line-height: 1.4;
 
 }
 /* links */
@@ -80,7 +78,7 @@
   color: rgb(199, 176, 129);
 }
 
-.footer {
+/* .footer {
   display: flex;
   flex: 1;
   padding: 2rem 0;
@@ -94,7 +92,7 @@
   justify-content: center;
   align-items: center;
   flex-grow: 1;
-}
+} */
 
 /*  */
 /* .code {
@@ -149,17 +147,20 @@
   margin-left: 0.5rem;
 } */
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 920px) {
   .container {
     padding: 5rem 10rem;
-    margin-top: -190px;
+    margin-top: -100px;
   }
-  .image_section {
+  .image_section img {
     display: none;
   }
   .main {
     justify-content: center;
     align-items: center;
+    display: grid;
+    grid-template-columns: 1fr;
+    
   }
   .main h1 {
     font-size: 3.5rem;
