--- a/styles/Portf.module.css
+++ b/styles/Portf.module.css
@@ -81,7 +81,25 @@
   line-height: 1.3;
 }
 
-@media (max-width: 720px) {
+/* .footer {
+  display: flex;
+  flex: 1;
+  padding: 2rem 0;
+  border-top: 1px solid #eaeaea;
+  justify-content: center;
+  align-items: center;
+  margin: 0 35px;
+
+}
+
+.footer a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+} */
+
+@media (max-width: 920px) {
   .container {
     grid-template-columns: 1fr;
   }
