--- a/styles/Resume.module.css
+++ b/styles/Resume.module.css
@@ -1,19 +1,18 @@
 .container {
-  background: #262833;
+  margin: 5% 20%;
 }
 
 .grid {
   display: grid;
-  grid-template-columns: 500px 1fr;
+  grid-template-columns: 1fr 500px;
   /* align-items: center;
   text-align: center;
   justify-content: center; */
   background: #3c2e21;
-  margin: 0 20%;
 }
 .leftgrid {
   background: rgba(47, 28, 28, 0.528);
-  margin-right: 20%;
+  margin-right: 100% 50%;
 }
 .contact {
   background-color: #3d2f21;
@@ -56,7 +55,6 @@
   padding: 0 40px;
   color: #5c4636;
   margin-top: 180px;
-
 }
 
 .name h5 {
@@ -112,5 +110,74 @@
   font-size: 18px;
   font-weight: 500;
   margin: 20px 0 -5px 0;
-  color: #745E4C;
+  color: #745e4c;
+}
+.download a {
+  color: wheat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 300px 50px;
+  font-size: 18px;
+  font-family: Bitstream Vera Sans Mono, Courier New, monospace;
+}
+
+.download {
+  display: none;
+}
+
+.download_resume button {
+  color: #29241f;
+  background-color: wheat;
+  border: none;
+  border-radius: 3px;
+  padding: 8px 15px;
+  font-size: 18px;
+ 
+}
+.download_resume{
+  display: flex;
+  justify-content: end !important;
+  align-items: flex-end;
+  text-align: end;
+  margin: 0px 0px 30px 0px;
+
+}
+
+/* .footer {
+  display: flex;
+  flex: 1;
+  padding: 2rem 0;
+  border-top: 1px solid #eaeaea;
+  justify-content: center;
+  align-items: center;
+  margin: 0 90px;
+}
+
+.footer a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+} */
+@media screen and (max-width: 1280px) {
+  .container {
+    display: none;
+  }
+
+  .grid {
+    margin: 0% !important;
+  }
+  .download {
+    display: block;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .container {
+    display: none;
+  }
+  .download {
+    display: block;
+  }
 }
