--- a/styles/Resume.module.css
+++ b/styles/Resume.module.css
@@ -2,23 +2,23 @@
   margin: 5% 20%;
 }
 
-.grid {
+/* .grid {
   display: grid;
   grid-template-columns: 1fr 500px;
   /* align-items: center;
   text-align: center;
   justify-content: center; */
-  background: #3c2e21;
-}
-.leftgrid {
+  /* background: #3c2e21;
+}  */
+/* .leftgrid {
   background: rgba(47, 28, 28, 0.528);
   margin-right: 100% 50%;
-}
-.contact {
+} */
+/* .contact {
   background-color: #3d2f21;
   color: #f8f7f3;
   /* margin-right: 10%; */
-  margin-left: 8%;
+  /* margin-left: 8%;
   padding: 19px;
 }
 
@@ -26,6 +26,7 @@
   text-transform: uppercase;
   letter-spacing: 2px;
   font-weight: 500;
+  font-size: 16px;
 }
 .details h4::after {
   content: "";
@@ -35,21 +36,28 @@
   background: #f8f7f3;
   margin-top: 10px;
 }
+
+.details a {
+  display: flex;
+  margin: 10px 0 0 0;
+}
+
 .skillsgrid {
   display: grid;
   grid-template-columns: 1fr 1fr;
   /* gap: 0; */
-  line-height: 1;
+  /* line-height: 1;
 }
 .skillsgrid1 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   /* gap: 0; */
-  line-height: 1;
+  /* line-height: 1;
+  font-size: 13px;
 }
 
 .skillsgrid > div {
-  font-size: 16px;
+  font-size: 13px;
 }
 .rightgrid {
   background: #fff;
@@ -79,9 +87,9 @@
   line-height: 1.5;
   padding: 2px 15px;
   margin: 0;
-}
+}   */
 
-.experience {
+/* .experience {
   padding: 0 40px;
   color: #29241f;
 }
@@ -90,8 +98,6 @@
   text-transform: uppercase;
   color: #5c4636;
   letter-spacing: 2px;
-  /* border-bottom: 2px solid #3c2e21;
-  margin: 0 20px; */
 }
 
 .experience h3::after {
@@ -102,10 +108,9 @@
   background: #5c4636;
   margin-top: 10px;
 
-  /* right: calc(50% - 5px); */
 }
 
-.experience ul{
+.experience ul {
   color: rgb(122, 154, 110);
 }
 
@@ -114,14 +119,13 @@
   display: inline-block;
   background: #e5e2df;
   margin: 0;
-  /* margin-rirgb(210, 211, 212)px; */
 }
 .role {
   font-size: 18px;
   font-weight: 500;
   margin: 20px 0 -5px 0;
   color: #745e4c;
-}
+} */
 .download a {
   color: wheat;
   display: flex;
@@ -143,17 +147,38 @@
   border-radius: 3px;
   padding: 8px 15px;
   font-size: 18px;
- 
 }
-.download_resume{
+.download_resume {
   display: flex;
   justify-content: end !important;
   align-items: flex-end;
   text-align: end;
   margin: 0px 0px 30px 0px;
-
 }
 
+.canva {
+  position: relative;
+  width: 100%;
+  height: 0;
+  /* padding-top: 141.4286%; */
+  padding-bottom: 48px;
+  box-shadow: 0 2px 8px 0 rgba(63, 69, 81, 0.16);
+  margin-top: 1.6em;
+  margin-bottom: 0.9em;
+  overflow: hidden;
+  border-radius: 8px;
+  will-change: transform;
+}
+/* .iframe {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  border: none;
+  padding: 0;
+  margin: 0;
+}  */
 /* .footer {
   display: flex;
   flex: 1;
