--- a/styles/Resume.module.css
+++ b/styles/Resume.module.css
@@ -2,18 +2,23 @@
   margin: 5% 20%;
 }
 
-.download a {
-  color: wheat;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 300px 50px;
-  font-size: 18px;
-  font-family: Bitstream Vera Sans Mono, Courier New, monospace;
-}
+
 
 .download {
   display: none;
+}
+
+.download a {
+  color: wheat;
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  /* margin: 300px 50px; */
+  font-size: 18px;
+  font-family: Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
 .download_resume button {
@@ -45,21 +50,29 @@
   will-change: transform;
 }
 
-@media screen and (max-width: 1280px) {
-  .container {
+@media screen and (max-width: 520px) {
+  /* .container {
     display: none;
-  }
-
+  } */
   .grid {
     margin: 0% !important;
+    display: none;
+  }
+  
+  .download_resume{
+    display: none;
   }
   .download {
     display: block;
   }
 }
 
-@media screen and (max-width: 450px) {
-  .container {
+@media screen and (max-width: 450px) { 
+ /* .container {
+    display: none;
+  }  */
+  .grid {
+    margin: 0% !important;
     display: none;
   }
   .download {
