--- a/styles/Resume.module.css
+++ b/styles/Resume.module.css
@@ -1,10 +1,13 @@
 .container {
   margin: 5% 20%;
+  width: 100%;
 }
 
-
-
 .download {
+  display: none;
+}
+
+/* .download {
   display: none;
 }
 
@@ -17,11 +20,11 @@
   align-items: center;
   text-align: center;
   /* margin: 300px 50px; */
-  font-size: 18px;
+  /* font-size: 18px;
   font-family: Bitstream Vera Sans Mono, Courier New, monospace;
-}
+}  */
 
-.download_resume button {
+/* .download_resume button {
   color: #29241f;
   background-color: wheat;
   border: none;
@@ -48,22 +51,24 @@
   overflow: hidden;
   border-radius: 8px;
   will-change: transform;
-}
+} */
 
 @media screen and (max-width: 520px) {
-  /* .container {
-    display: none;
-  } */
+  .container {
+    margin: 0;
+    margin-top: 10%;
+  }
   .grid {
-    margin: 0% !important;
     display: none;
   }
   
   .download_resume{
     display: none;
   }
-  .download {
+.download {
     display: block;
+  margin: 0;
+
   }
 }
 
@@ -75,7 +80,7 @@
     margin: 0% !important;
     display: none;
   }
-  .download {
+  /* .download {
     display: block;
-  }
+  } */
 }
